[package]
name = "cassandra_lib_myself"
version = "0.1.0"
authors = ["ZT02777(Chi-Wei.Shen) <chi-wei.shen@zyxel.com.tw>"]

[dependencies]
cassandra-cpp = "0.13.0"
cassandra-cpp-sys = "0.12.0"
futures = "0.1.25"
simplelog = "0.5.3"
log = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.32"
serde-transcode = "1.0.0"
iron = "0.6.0"
rand = "0.5.5"
router = "0.6.0"
http = "0.1.13"
url = "1.7.1"