[package]
name = "cassandra_lib_myself"
version = "0.1.0"
authors = ["ZT02777(Chi-Wei.Shen) <chi-wei.shen@zyxel.com.tw>"]

[profile.release]
debug = true

[dependencies]
cassandra-cpp = "0.14.0"
lazy_static = "1.3.0"
futures = "0.1.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
log = "0.4.6"
simplelog = "0.5.3"
chrono = "0.4.6"
libmath = "0.2.1"
time = "0.1.42"

actix = "0.7"
actix-web = "^0.7"
