[package]
name = "cassandra_lib_myself"
version = "0.1.0"
authors = ["ZT02777(Chi-Wei.Shen) <chi-wei.shen@zyxel.com.tw>"]

[dependencies]
cassandra-cpp = "0.14.0"
lazy_static = "1.3.0"
futures = "0.1.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
log = "0.4.6"
fern = "0.5.8"
chrono = "0.4.6"
libmath = "0.2.1"
time = "0.1.42"
uuid = "0.7"
eui48 = "0.4.6"

actix = "^0.8.3"
actix-web = "^1.0.3"

config = "0.9.3"
